--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.5.3"
+    "mongoose": "^6.5.3",
+    "mongoose-delete": "^0.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
