--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
@@ -19,8 +20,7 @@
     "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.29",
-    "web-vitals": "^2.1.4",
-    "pure-react-carousel":"^1.29.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,4 +52,3 @@
     "tailwindcss": "^3.1.8"
   }
 }
-
