--- a/api/.env
+++ b/api/.env
@@ -2,3 +2,4 @@ PORT = 3001
 PUBLIC_URL = http://localhost:3001
 DB_URI = "mongodb+srv://admin:1234@serverpf.oq1fkfp.mongodb.net/databasePF?retryWrites=true&w=majority"
 JWT_SECRET = KeyMaster
+GOOGLE = 595173528563-62kj2r0qatrvjl30lgal6kghk7m4envk.apps.googleusercontent.com
