--- a/api/package.json
+++ b/api/package.json
@@ -16,8 +16,10 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.5.3",
-    "mongoose-delete": "^0.5.4"
+    "mongoose-delete": "^0.5.4",
+    "passport-github2": "^0.1.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
