--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
-    "mongoose-delete": "^0.5.4"
+    "mongoose-delete": "^0.5.4",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
