--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@ node_modules/
 #variables de entorno
 .env
 
+api/package-lock.json
+
+api/config/account_transport.json
+
 #paypal credentials
 api/config/paypalcredentials.js
