--- a/api/package.json
+++ b/api/package.json
@@ -15,10 +15,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "googleapis": "^107.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.5.3",
     "mongoose-delete": "^0.5.4",
-    "request": "^2.88.2"
+    "nodemailer": "^6.7.8",
+    "passport-github2": "^0.1.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
