--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^6.5.3",
     "mongoose-delete": "^0.5.4",
     "nodemailer": "^6.7.8",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
