--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -18,6 +19,7 @@
     "googleapis": "^107.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.3",
     "mongoose-delete": "^0.5.4",
     "nodemailer": "^6.7.8",
