--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "googleapis": "^107.0.0",
     "jsonwebtoken": "^8.5.1",
