--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,12 @@
     "react-simple-chatbot": "^0.6.1",
     "styled-components": "^4.0.0",
     "sweetalert2": "^11.4.29",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
